--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     <section id="hero">
         <div class="container">
             <div class="herotext">
-                <h1>Who am I, <span style="color: #4252EB;">what makes me tick</span>, and more...</h1>
+                <h1>Who I am, <span style="color: #4252EB;">what makes me tick</span>, and more...</h1>
                 <p>I come from an Engineering background, in Electronics and Communications engineering. I worked for a global MNC, Dyson, in Customer Experience and Service Design for more than 2 years post completing my undergrad. I was always fascinated by the digital aspect of Customer Experience, which I soon discovered was a related field, called User Experience or UX. I was instantly struck by the prospect of pursuing a creative career, in tech, which would be more fulfilling than my line of work at the time. Therefore, I decided to go all in and work towards a career change into UX. That is why I decided to pursue an M.S. in Information Science with a Human-Computer Interaction/UX Specialization from the University of Texas at Austin, US.</p>
                 <p>I am very solution-oriented, and that is what makes me a great researcher and designer. Defining a problem, and figuring out the how and the why is something which makes me want to get out of bed every day. This not only applied to design and UX but also to other parts of my life, like trying a new exercise in the gym, playing and recording a new song on the guitar, cooking a new recipe, etc. This innate inquisitiveness and an eye for good solutions are what make me unique.</p>
             </div>
