--- a/LastMinute.html
+++ b/LastMinute.html
@@ -343,7 +343,7 @@
 
 <nav class="bottom-nav">
     <ul class="bottom-nav-list">
-    
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="#home">Back to top</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#concept">Concept</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#research">Research</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#ideation">Ideation</a></li>
