--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="UTbox">
                     <img src="assets/UTlogo.svg" alt="">
                     <p>
-                        <span style="color: #121212; font-weight: bold;">M.S. Information Science/UX Specialization </span>at<br> <span style="color: #121212; font-weight: bold;">The University of Texas at Austin, TX, United States.</span>
+                        <span style="color: #121212; font-weight: bold;">M.S. Information Science/UX Specialization </span>at<br> <span style="color: #121212; font-weight: bold;">The University of Texas at Austin</span>, TX, United States.
                     </p>   
                 </div>
             </div>
