--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     
                 <div class="companycard">
 
-                        <img src="assets/dysonlogo.svg" alt="">
+                        <img src="assets/dysonlogo.svg" alt="" style="margin: 4% 0%;">
 
                         <div class="cardtext">
                             <h1 style="font-size: 1rem; letter-spacing: 1.6px;">DYSON</h1>
