--- a/LastMinute.html
+++ b/LastMinute.html
@@ -46,7 +46,7 @@
     <ul class="menu">
         <li><a class="case-nav-links" href="index.html">Home</a></li>
         <li><a class="case-nav-links" href="about.html">About</a></li>
-        <li><a class="case-nav-links" href="assets/Madhav Varma UXD.pdf" download></i>Resume</a></li>
+        <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
         <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
         <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
         <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
