--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <ul class="menu">
           <li><a class="case-nav-links" href="index.html">Home</a></li>
           <li><a class="case-nav-links" href="about.html">About</a></li>
-          <li><a class="case-nav-links" href="assets/Madhav Varma UXD.pdf" download></i>Resume</a></li>
+          <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
           <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
           <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
@@ -56,7 +56,7 @@
     <section id="hero">
         <div class="container">
             <div class="herotext">
-                <h1>Hi! I'm Madhav,<br> a<span style="color: #4252EB;"> Product Designer.</span></h1>
+                <h1 class="Intro">Hi! I'm Madhav, a<span style="color: #4252EB;"> Product Designer.</span></h1>
                 <p>Also proficient at <br><span style="color: #121212; font-weight: 800;">UX Research and Frontend Development(I coded this website).</span></p>
                 <p style="color: #121212; font-weight:900; font-style: italic;">Actively looking for full-time Product Design and UX Research roles. </p>
                 <div class="UTbox">
@@ -201,8 +201,11 @@
                 <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP</h1>
                 <h1 style="font-size: 1.5rem;">2023 Product Design Summer Internship: Thoughtcloud </h1>
                 <p class="projectcarddetails">Design work done at Thoughtcloud over the summer of 2023, an early stage tech start up. This is covered by an NDA so details can only be discussed in an interview setting.</p>
+                
                 <div class="buttons">
-                    <a href="mailto:madhav18897@utexas.edu" target="_blank" style="text-decoration: none;"><h1 class="primarybtn" >Contact for details<i class="fa-solid fa-arrow-right"></i></h1></a>
+
+                    <a href="thoughtcloud.html"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
+                    <a href="mailto:madhav18897@utexas.edu" target="_blank" style="text-decoration: none;"><h1 class="secondarybtn" >Contact for more details<i class="fa-solid fa-arrow-right"></i></h1></a>
 
                     <!-- <h1 class="secondarybtn">View Prototype<i class="fa-solid fa-arrow-right"></i></h1>  -->
         
