--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="buttons">
-                <a href="assets/Madhav Varma UXD.pdf" style="text-decoration: none;" download=""><h1 class="primarybtn"><i class="fa-solid fa-download fa-bounce fa-xl" style="margin-right: 0.5rem;" ></i>Download My Resume</h1></a>
+                <a href="assets/Madhav Varma Resume 2024.pdf" style="text-decoration: none;" download=""><h1 class="primarybtn"><i class="fa-solid fa-download fa-bounce fa-xl" style="margin-right: 0.5rem;" ></i>Download My Resume</h1></a>
             </div>
                     
         </div>
