--- a/LastMinute.html
+++ b/LastMinute.html
@@ -206,7 +206,7 @@
 
         <h1>Information Architecture (IA)</h1>
         <p>From the aforementioned user behavior reports, we were able to map out an information architecture for our application that would best suit user needs and provide good affordances for tasks users might try and accomplish on our application. </p>
-        <a href="" target="_blank"><button class="btn">Link to Information Architecture</button></a>
+        <a href="https://www.figma.com/file/95WxQDO6wTavHvPqauyqwW/HCI-Project-%3A-LastMinute-booking-app?type=design&node-id=2233-2250&mode=design" target="_blank"><button class="btn">Link to Information Architecture</button></a>
         <img class="info-arch" src="HCIAssets/info arch.svg" loading="lazy">
 
 
