--- a/LastMinute.html
+++ b/LastMinute.html
@@ -37,7 +37,7 @@
 
 <section class="top-nav" id="navbar">       
     <div>
-        <a class="case-nav-links" href="index.html"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
+        <a class="case-nav-links" href="index.html#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
