--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
             <img class="project_img" src="assets/wcwhtile.svg" alt="">
             <div class="projectcardtext">
                 <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">UX CASE STUDY </h1>
-                <h1 style="font-size: 1.5rem;">Whole Communities Whole Health, A UT Initiative Case Study</h1>
-                <p class="projectcarddetails">A UX/UI case study done for my Information Architecture Class, working closely with WCWH, a UT Health research initiative, focused on marginalized communities.</p>
+                <h1 style="font-size: 1.5rem;">Whole Communities Whole Health, A UT Initiative <br>UX Research and Design Case Study</h1>
+                <p class="projectcarddetails">A UX/UI case study done for my Information Architecture Class, working closely with WCWH,<br> a UT Health research initiative, focused on marginalized communities.</p>
                 <div class="buttons">
                     <a href="WCWH.html" style="text-decoration: none;"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
 
