--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="projectcard">
             <img class="project_img" src="assets/thoughtcloudtile.svg" alt="">
             <div class="projectcardtext">
-                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP</h1>
+                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP (FULL TIME)</h1>
                 <h1 style="font-size: 1.5rem;">2023 Product Design Summer Internship: Thoughtcloud </h1>
                 <p class="projectcarddetails">Design work done at Thoughtcloud over the summer of 2023, an pre-revenue tech start up. This is covered by an NDA so details can only be discussed in an interview setting.</p>
                 
@@ -227,7 +227,7 @@
         <div class="projectcard">
             <img class="project_img" src="assets/idesigntile.svg" alt="">
             <div class="projectcardtext">
-                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP</h1>
+                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP (FULL TIME)</h1>
                 <h1 style="font-size: 1.5rem;">2021-2022 Product Design Internship: iDesign.Market</h1>
                 <p class="projectcarddetails">Design work done at iDesign.Market , an post-revenue stage SAAS tech start up. This is covered by an NDA so details can only be discussed in an interview setting.</p>
                 
