--- a/WCWH.html
+++ b/WCWH.html
@@ -80,7 +80,7 @@
 
         <div class="leftright">
             <div class="imageside">
-                <img src="wcwhpiece/wcwhtile.svg">
+                <img class="tileimg" src="wcwhpiece/wcwhtile.svg">
             </div>
             <div class="textside">
                 <h2>My Role</h2>
@@ -107,7 +107,7 @@
         <div class="leftright">
 
             <div class="imageside">
-                <img src="wcwhpiece/goals.svg">
+                <img class="tileimg" src="wcwhpiece/goals.svg">
             </div>
             <div class="textside">
                     <h2>1. Accessible Data Representation</h2>
@@ -521,7 +521,7 @@
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#research">Research</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#Prototyping">Prototyping</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#finalprototype">Final Prototype</a></li>
-      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#projects">Other Projects</a></li>
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#project">Other Projects</a></li>
 
     </ul>
 </nav>
