--- a/about.html
+++ b/about.html
@@ -56,18 +56,20 @@
         <div class="container">
             <div class="herotext">
                 <h1 class="Intro">Who I am, <span style="color: #4252EB;">what makes me tick</span>, and more...</h1>
-                <p>I come from an Engineering background, in Electronics and Communications engineering. I worked for a global MNC, Dyson, in Customer Experience and Service Design for more than 2 years post completing my undergrad. I was always fascinated by the digital aspect of Customer Experience, which I soon discovered was a related field, called User Experience or UX. I was instantly struck by the prospect of pursuing a creative career, in tech, which would be more fulfilling than my line of work at the time. Therefore, I decided to go all in and work towards a career change into UX. That is why I decided to pursue an M.S. in Information Science with a Human-Computer Interaction/UX Specialization from the University of Texas at Austin, US.</p>
-                <p>I am very solution-oriented, and that is what makes me a great researcher and designer. Defining a problem, and figuring out the how and the why is something which makes me want to get out of bed every day. This not only applied to design and UX but also to other parts of my life, like trying a new exercise in the gym, playing and recording a new song on the guitar, cooking a new recipe, etc. This innate inquisitiveness and an eye for good solutions are what make me unique.</p>
+                <!-- <p>I come from an Engineering background, in Electronics and Communications engineering. I worked for a global MNC, Dyson, in Customer Experience and Service Design for more than 2 years post completing my undergrad. I was always fascinated by the digital aspect of Customer Experience, which I soon discovered was a related field, called User Experience or UX. I was instantly struck by the prospect of pursuing a creative career, in tech, which would be more fulfilling than my line of work at the time. Therefore, I decided to go all in and work towards a career change into UX. That is why I decided to pursue an M.S. in Information Science with a Human-Computer Interaction/UX Specialization from the University of Texas at Austin, US.</p> -->
+                <p>After earning my degree in Electronics Engineering, I joined Dyson's Service Design and Customer Experience team, where I discovered a deep interest in the digital realm of Customer Experience, commonly known as User Experience (UX). My journey continued with a startup, where I played a key role in developing their initial product offering, sparking my passion for product design.<br><br>
+                Driven by a fascination for user-machine interaction rooted in user research and efficient design, I wholeheartedly embraced the opportunity to delve deeper into this field. This led me to pursue a Master's in Information Science with a specialization in Human-Computer Interaction/UX at the University of Texas, Austin, USA. <br><br>
+                At UT, I've acquired practical knowledge spanning the entire product life cycle. This journey includes in-depth UX research, crafting Information Architecture, conducting Usability and Accessibility testing, creating prototypes, and engaging in Product Development and Management. Moreover, the experience has taught me the importance of teamwork and effective time management. I'm confident that these skills will be valuable assets wherever I go next as well as throughout my career.</p>
             </div>
             <div class="hero-img">
-                <img class="mvphoto" src="assets/RHSprofileimg.svg" alt="">
+                <img class="mvphoto" src="assets/trial.svg" alt="">
             </div>
         </div>
 
     </section>
 
     <section id="testimonials">
-        <h1>What <span style="color: #4252EB;">people I have worked with </span>say about me...</h1>
+        <h1>How <span style="color: #4252EB;">mentors and colleagues </span>describe their experience <br> working with me...</h1>
         <p style="margin-bottom: 4rem;">Source: LinkedIn Recommendations</p>
 
         <div class="testimonial reveal">
