--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
     <section id="projects">
         <h1>I don't just make products.<span style="color: #4252EB;"> I make music too.</span> </h1>
         <div class="projectcard">
-            <iframe class="youtubeembed" width="100%" height="100%" src="https://www.youtube.com/embed/SURbRfuLkmQ?si=xMEvb47p6Z2uZR3w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 2rem;"></iframe>
+            <iframe class="youtubeembed" width="100%" height="100%" src="https://www.youtube.com/embed/JTBsjySeBJA?si=anQ3iiapKPboJMEp"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 2rem;"></iframe>
             <div class="projectcardtext">
                 <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">YOUTUBE CHANNEL</h1>
                 <h1 style="font-size: 1.5rem;">Capturing Melodies: Explore the Soul of Music on My Channel.</h1>
