--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         <div class="projectcard">
             <img class="project_img" src="assets/idesigntile.svg" alt="">
             <div class="projectcardtext">
-                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERNSHIP (FULL TIME)</h1>
-                <h1 style="font-size: 1.5rem;">2021-2022 Product Design Internship: iDesign.Market</h1>
+                <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">STARTUP EXPERIENCE (FULL TIME)</h1>
+                <h1 style="font-size: 1.5rem;">2021-2022 Product Designer Role: iDesign.Market</h1>
                 <p class="projectcarddetails">Design work done at iDesign.Market , an post-revenue stage SAAS tech start up. This is covered by an NDA so details can only be discussed in an interview setting.</p>
                 
                 <div class="buttons">
