--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
             <div class="herotext">
                 <h1 class="Intro">Hi! I'm Madhav, a<span style="color: #4252EB; text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;"> Product Designer.</span></h1>
                 <p>Also proficient at <br><span style="color: #121212; font-weight: 800;">UX Research and UX Engineering (I developed this website).</span></p>
-                <p style="color: #121212; font-weight:900; font-style: italic;">Actively looking for full-time Product Design, UX Research, and UX Engineering roles. </p>
+                <p style="color: #121212; font-weight:bolder; font-style: italic;">Actively looking for full-time Product Design, UX Research, and UX Engineering roles.</p>
                 <div class="UTbox">
-
-                    <img class="educationbadge" src="assets/educationbadge.svg" alt="">
-                    <!-- <img src="assets/UTlogo.svg" alt="">
-                    <p>
-                        <span style="color: #121212; font-weight: bold;">M.S. Information Science/UX Specialization </span>at<br> <span style="color: #121212; font-weight: bold;">The University of Texas at Austin</span>, TX, United States.
-                    </p>    -->
+                        <div>
+                            <img class="bevo" src="assets/bevo.svg" alt="">
+                        </div>
+                        <div class="ut_text">
+                            <p style="color: #121212 ; font-weight: 900; margin: 0;">MSIS-Human-Computer Interaction | UT Austin</p>
+                        </div>
                 </div>
+
             </div>
             <div class="hero-img">
-                <!-- <img class="mvphoto" src="assets/RHSprofileimg.svg" alt=""> -->
                 <img class="mvphoto" src="assets/trial.svg" alt="">
             </div>
         </div>
