--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <img class="bevo" src="assets/bevo.svg" alt="">
                         </div>
                         <div class="ut_text">
-                            <p style="color: #121212 ; font-weight: 900; margin: 0;">MSIS-Human-Computer Interaction | UT Austin</p>
+                            <p style="color: #121212 ; font-weight: 900; margin: 0;">UT Austin 24' <span style="color: #808080;">•</span> MSIS-Human-Computer Interaction </p>
                         </div>
                 </div>
 
