--- a/thoughtcloud.html
+++ b/thoughtcloud.html
@@ -46,7 +46,7 @@
     <div class='menu-button'></div>
     </label>
     <ul class="menu">
-        <li><a class="case-nav-links" href="index.html">Home</a></li>
+        <li><a class="case-nav-links" href="index.html#hero">Home</a></li>
         <li><a class="case-nav-links" href="about.html">About</a></li>
         <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
         <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
@@ -79,7 +79,7 @@
         <p>June 2023 to August 2023</p>
 
         <div class="disclaimer">
-            <h1 style="color: #fff;"><b>Disclaimer</b></h1>
+            <h1 style="color: #fff; margin-top: 0;"><b>Disclaimer</b></h1>
             <p style="color: #fff;">I have signed a non-disclosure agreement (NDA) with Thoughtcloud. The parts included in this case study are the parts which I am allowed to display on my portfolio legally. There are other important elements of this case study (that highlight some of my other UX skills like research and business acumen) that I can only discuss in an interview situation.</p>
         </div>
 
@@ -278,6 +278,7 @@
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#timeline">Timeline</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#moredetails">More details</a></li>
       <!-- <li class="bottom-nav-item"><a class="bottom-nav-link" href="#finalprototype">Final Prototype</a></li> -->
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#projects">Other Projects</a></li>
 
     </ul>
 </nav>
