--- a/usability.html
+++ b/usability.html
@@ -39,7 +39,7 @@
 <section class="top-nav" id="navbar">
         
     <div>
-        <a class="case-nav-links" href="index.html"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
+        <a class="case-nav-links" href="index.html#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
@@ -235,6 +235,7 @@
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#heuristiceval">Heuristic Evaluation</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#testing">Testing</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#finalprototype">Final Prototype</a></li>
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#projects">Other Projects</a></li>
 
     </ul>
 </nav>
