--- a/MyCoProject.html
+++ b/MyCoProject.html
@@ -38,7 +38,7 @@
 <section class="top-nav" id="navbar">
         
     <div>
-        <a class="case-nav-links" href="index.html"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
+        <a class="case-nav-links" href="index.html#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
@@ -344,6 +344,7 @@
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#research">Research</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#Prototyping">Prototyping</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#finalprototype">Final Prototype</a></li>
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#projects">Other Projects</a></li>
 
     </ul>
 </nav>
