--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
     <section id="companies">
             <h1 style="margin-bottom: 3rem;"><span style="color: #4252EB;">Companies</span> I've contributed to...</h1>
             <div class="leftright">
-                    <img class="workeximg" src="assets/TCworkexcard.svg" alt="">
-                    <img class="workeximg" src="assets/IDworkexcard.svg" alt="">
-                    <img class="workeximg" src="assets/DYworkedcard.svg" alt="">
+                    <img class="workeximg" src="assets/dellmedlogo.svg" alt="">
+                    <img class="workeximg" src="assets/TClogo.svg" alt="">
+                    <img class="workeximg" src="assets/idesignlogo.svg" alt="">
+                    <img class="workeximg" src="assets/dysonlogo.svg" alt="">
             </div>
         
     </section>
