--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
                     <img class="workeximg" src="assets/idesignlogo.svg" alt="">
                     <img class="workeximg" src="assets/dysonlogo.svg" alt="">
             </div>
+            <div class="buttons" style="margin-top: 80px;">
+                <a href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true" style="text-decoration: none;" target="_blank"><h1 class="primarybtn">Resume<i class="fa-solid fa-arrow-right"></i></h1></a>
+
+                <a href="https://www.linkedin.com/in/madhav-varma/" style="text-decoration: none;" target="_blank"><h1 class="secondarybtn">Linkedin<i class="fa-solid fa-arrow-right"></i></h1></a> 
+            </div>
         
     </section>
 
