--- a/WCWH.html
+++ b/WCWH.html
@@ -521,7 +521,7 @@
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#research">Research</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#Prototyping">Prototyping</a></li>
       <li class="bottom-nav-item"><a class="bottom-nav-link" href="#finalprototype">Final Prototype</a></li>
-      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#project">Other Projects</a></li>
+      <li class="bottom-nav-item"><a class="bottom-nav-link" href="index.html#projects">Other Projects</a></li>
 
     </ul>
 </nav>
