--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <h1 style="font-size: 1.5rem;">Whole Communities Whole Health, A UT Initiative <br>UX Research and Design Case Study</h1>
                 <p class="projectcarddetails">A UX/UI case study done for my Information Architecture Class, working closely with WCWH,<br> a UT Health research initiative, focused on marginalized communities.</p>
                 <div class="buttons">
-                    <a href="WCWH.html" style="text-decoration: none;"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
+                    <a href="WCWH2.html" style="text-decoration: none;"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
 
                     <a href="https://www.figma.com/proto/uuvQ3C8YfvmZipigpwJoyh/WCWH-IA-Project?page-id=932%3A2922&node-id=1768%3A5032&viewport=-4336%2C-979%2C0.24&scaling=scale-down&starting-point-node-id=1768%3A7494&show-proto-sidebar=1" style="text-decoration: none;" target="_blank"><h1 class="secondarybtn">View Prototype<i class="fa-solid fa-arrow-right"></i></h1></a>  
         
@@ -230,7 +230,7 @@
                 
                 <div class="buttons">
 
-                    <a href="thoughtcloud.html"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
+                    <a href="thoughtcloud2.html"><h1 class="primarybtn" >Read Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
                     <a href="mailto:madhav18897@utexas.edu" target="_blank" style="text-decoration: none;"><h1 class="secondarybtn" >Contact for more details<i class="fa-solid fa-arrow-right"></i></h1></a>
 
                     <!-- <h1 class="secondarybtn">View Prototype<i class="fa-solid fa-arrow-right"></i></h1>  -->
