--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         
     </section>
 
-    <img src="assets/Line 81.svg" alt="" style="width: 100%;">
+    <!-- <img src="assets/Line 81.svg" alt="" style="width: 100%;"> -->
 
-    <section id="footer">
+    <section id="footer" style="margin-top: 120px;">
         <div class="footer">
             <div class="footertext">
                 <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">FOOTER. BECAUSE EVERY WEBSITE NEEDS ONE... RIGHT? </h1>
