--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>          
         </div>
 
-        <div class="projectcard" style="margin-top: -3rem;">
+        <!-- <div class="projectcard" style="margin-top: -3rem;">
             <img class="project_img" src="assets/alamotile.svg" alt="">
             <div class="projectcardtext">
                 <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">INTERACTION DESIGN CASE STUDY</h1>
@@ -136,7 +136,7 @@
                 </div>
                 
             </div>          
-        </div>
+        </div> -->
 
         <div class="projectcard">   
             <img class="project_img" src="assets/lastminutetile.svg" alt="">
