--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <section id="companies">
-            <!-- <h1 style="margin-bottom: 3rem;"><span style="color: #4252EB;">Companies</span> I've contributed to...</h1> -->
+            <h1 style="margin-bottom: 3rem;"><span style="color: #4252EB;">Companies</span> I've contributed to...</h1>
             <div class="leftright">
                     
                     <img class="workeximg" src="assets/GClogo.svg" alt="">
