--- a/WCWH.html
+++ b/WCWH.html
@@ -466,7 +466,8 @@
                 <h1 id="finalprototype">Final Prototype and Walkthrough</h1>
                 <p>You will find a clickable prototype of the product below. Have fun!</p>
                 <a href="https://www.figma.com/proto/uuvQ3C8YfvmZipigpwJoyh/WCWH-IA-Project?page-id=932%3A2922&node-id=1768%3A5032&viewport=-4336%2C-979%2C0.24&scaling=scale-down&starting-point-node-id=1768%3A7494&show-proto-sidebar=1"><button class="btn">Link to Final Prototype</button></a>
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1); margin: 5% 0%;" width="100%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuuvQ3C8YfvmZipigpwJoyh%2FWCWH-IA-Project%3Fpage-id%3D932%253A2922%26node-id%3D1768%253A5032%26viewport%3D-4336%252C-979%252C0.24%26scaling%3Dscale-down%26starting-point-node-id%3D1768%253A7494" loading="lazy" allowfullscreen ></iframe>
+                <!-- <iframe style="border: 1px solid rgba(255, 255, 255, 0.1); margin: 5% 0%;" width="100%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuuvQ3C8YfvmZipigpwJoyh%2FWCWH-IA-Project%3Fpage-id%3D932%253A2922%26node-id%3D1768%253A5032%26viewport%3D-4336%252C-979%252C0.24%26scaling%3Dscale-down%26starting-point-node-id%3D1768%253A7494" loading="lazy" allowfullscreen ></iframe> -->
+                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuuvQ3C8YfvmZipigpwJoyh%2FWCWH-IA-Project%3Fpage-id%3D932%253A2922%26node-id%3D1768-5032%26viewport%3D-4336%252C-979%252C0.24%26scaling%3Dscale-down%26starting-point-node-id%3D1768%253A7494%26mode%3Ddesign%26t%3DjuynrqJXkySCHpRh-1" loading="lazy" allowfullscreen></iframe>
                 <img class="mockups" src="wcwhpiece/mockups.svg" loading="lazy"> 
             </div>
             <div class="content-block">
