--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                     At UT, I've acquired practical knowledge spanning the entire product life cycle. This journey includes in-depth UX research, crafting Information Architecture, conducting Usability and Accessibility testing, creating prototypes, and engaging in Product Development and Management. Furthermore, I've gained a profound understanding of the significance of teamwork and adept time management. I am assured that these competencies will prove to be indispensable assets in my future endeavors and throughout my professional journey. </p>
             </div>
             <div class="hero-img">
-                <img class="mvphoto" src="assets/trial.svg" alt="">
+                <img class="mvphoto" src="assets/IMG_4131 2.svg" alt="">
             </div>
         </div>
         <div style="margin-top: 120px;">
