--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
           <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
           <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
           <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
-          <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+          <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
 
         </ul>
 
