--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
 
     <section id="companies">
-            <h1><span style="color: #4252EB;">Companies</span> I've contributed to...</h1>
+            <h1><span style="color: #5F50CC;">Companies</span> I've contributed to...</h1>
             <div class="leftright">
                     
                     <img src="assets/gclogobw.svg" alt="">
