--- a/WCWH.html
+++ b/WCWH.html
@@ -46,7 +46,7 @@
     <div class='menu-button'></div>
     </label>
     <ul class="menu">
-        <li><a class="case-nav-links" href="index.html#hero">Home</a></li>
+        <!-- <li><a class="case-nav-links" href="index.html#hero">Home</a></li> -->
         <li><a class="case-nav-links" href="about.html">About</a></li>
         <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
         <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
