--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
     <section id="projects">
 
         <h1>I don't just make products.<span style="color: #5F50CC;"> I make music too.</span> </h1>
-        <div class="grid-container">
+        <div class="grid-container" style="margin-top: 0;">
             <iframe class="youtubeembed" width="100%" height="100%" src="https://www.youtube.com/embed/bI_sDVUckaA?si=12_whcfAO5GPAH_4"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 2rem;" ></iframe>
             <div class="projectcard">
                 <div class="projectcardtext">
