--- a/GC.html
+++ b/GC.html
@@ -36,7 +36,7 @@
     </script>
 </head>
 
-<body>
+
     
 
 
@@ -61,7 +61,7 @@
 </section> 
 
 <div class="dummydiv" id="home" style="height: 120px;"></div>
-<body>
+<div class="body">
 
     <div class="loader">
         <h2 style="padding: 2%; color: #fff;" class="load-message">Loading, Please Wait...</h2>
