--- a/GC.html
+++ b/GC.html
@@ -126,18 +126,18 @@
                 <p style="margin-bottom: 2rem;">This project began as a UI exploration to draw attention to the newly launched Film Room feature, helping volleyball team staff analyze footage, mark key moments, and share them with players, coaches, or parents. We focused on small UI elements, like banners and tooltips, to address discoverability challenges, hypothesizing that the feature’s placement within multiple tabs and under other content made it hard to find.</p>
                 <div class="gridLR">
                     <div>
-                        <img class="affinity" src="GCassets/initialscreen2.svg" alt="">
+                        <img class="affinity" src="GCassets/initialscreen2.svg" alt="" loading="lazy">
                         <p style="color: #121212;">This from the team’s event or game page with a particular opponent (Rangeview Rangers in this case) and this page just contains full event videos and video clips from that particular game. Again, these can be clicked on and opened within film room.</p>
                     </div>
                     <div>
-                        <img class="affinity" src="GCassets/initialscreen1.svg" alt=""> 
+                        <img class="affinity" src="GCassets/initialscreen1.svg" alt="" loading="lazy"> 
                         <p style="color: #121212;">This screen is from the teams homepage where each of the videos can be clicked on and opened in Film Room. </p>   
                     </div>
                 </div> 
-                <img class="affinity" src="GCassets/FilmRoomIA.svg" alt="">  
+                <img class="affinity" src="GCassets/FilmRoomIA.svg" alt="" loading="lazy">  
                 <h2>The Explorations</h2>
                 <p>These are some explorations I did to visualize how the banner might look.</p>
-                <img class="affinity" src="GCassets/Explorations.svg" alt="">   
+                <img class="affinity" src="GCassets/Explorations.svg" alt="" loading="lazy">   
             </div>  
             
         
@@ -246,7 +246,7 @@
                 <h1>The <span style="color: #00d682;">Obvious</span> Next Step</h1>
                 <h2>More Exploration</h2>
                 <p>One thing that was made really apparent from this test was that there is a need for an easier and faster entry point into film room. After some brainstorming, we came to the realization the best way to do this would be through a widget on the home screen, which can take coaches and staff directly into film room shortly after a game has ended. I started doing some explorations for the same. </p>
-                <img class="affinity" src="GCassets/widgetexploration.svg" alt="">
+                <img class="affinity" src="GCassets/widgetexploration.svg" alt="" loading="lazy">
             </div>
 
             <div class="dummydiv" id="research" style="height: 40px;"></div>
@@ -339,7 +339,7 @@
 
                 <div class="gridLR">
                     <div>
-                        <img class="affinity" src="GCassets/filmroomwidgetscreen.svg" alt="" style="margin-top: 0;">
+                        <img class="affinity" src="GCassets/filmroomwidgetscreen.svg" alt="" style="margin-top: 0;" loading="lazy">
                     </div>
                     <div>
                         <h2>The Final Widget We Want To Test</h2>
