--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                     <img class="card-img" src="assets/GCtile.svg" alt="">
                     <div class="projectcardtext">
                         <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">CONTRACT (FULL TIME)</h1>
-                        <h1 style="font-size: 1.5rem;">GameChanger by Dick's Sporting Goods </h1>
-                        <p class="projectcarddetails">Design work done at GameChanger, a sports technology company.</p>
+                        <h1 style="font-size: 1.5rem;">GameChanger by Dick's Sporting Goods : Film Room Research </h1>
+                        <p class="projectcarddetails">Design work done at GameChanger, an American sports technology company.</p>
                         
                         <div class="buttons">
         
@@ -145,7 +145,7 @@
                 <div class="projectcard" id="dellmed">
                     <img class="card-img" src="assets/CDSS.svg" alt="">
                     <div class="projectcardtext">
-                        <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">UX CASE STUDY </h1>
+                        <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">CAPSTONE PROJECT - CONTRACT (FULL TIME) </h1>
                         <h1 style="font-size: 1.5rem;">Clinical Decision Support System (CDSS) for Nutritionists</h1>
                         <p class="projectcarddetails">🏆 Dean's Choice Award Winning UX Research & Design Case study with UT Dell Medical School.</p>
                         <div class="buttons">
@@ -400,5 +400,6 @@
 
 </body>
 
+</html>
 
 
