--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <p style="color: #121212; font-weight:bolder; font-style: italic;">Actively Looking for Full-Time Product Design and Research Roles.</p>
                     </div>
                     <div class="buttons">
-                        <a href="#projects" style="text-decoration: none;"><h1 class="primarybtn" style="background-color: #5F50CC;">My Work<i class="fa-solid fa-arrow-right"></i></h1></a>
+                        <a href="#projects" style="text-decoration: none;"><h1 class="primarybtn" style="background-color: #5F50CC;">Work<i class="fa-solid fa-arrow-right"></i></h1></a>
                         <a href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true" style="text-decoration: none;" target="_blank"><h1 class="primarybtn">Resume<i class="fa-solid fa-arrow-right"></i></h1></a>
                         <a href="https://www.linkedin.com/in/madhav-varma/" style="text-decoration: none;" target="_blank"><h1 class="secondarybtn">Linkedin<i class="fa-solid fa-arrow-right"></i></h1></a> 
                     </div>
@@ -128,7 +128,7 @@
                     <div class="projectcardtext">
                         <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">CONTRACT (FULL TIME)</h1>
                         <h1 style="font-size: 1.5rem;">GameChanger by Dick's Sporting Goods : Film Room Research </h1>
-                        <p class="projectcarddetails">Design work done at GameChanger, an American sports technology company.</p>
+                        <p class="projectcarddetails">Designed and tested critical entry points for the film analysis feature, projected to increase participation by 25%</p>
                         
                         <div class="buttons">
         
