--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         <div class="grid-container">
             <div>
                 <h1 style="margin-bottom: 1rem;">About <span style="color: #5F50CC;">Me</span></h1>
-                <p>Product Designer with a strong background in UX research and interaction design, specializing in crafting intuitive and engaging experiences. With experience at GameChanger, Dell Medical School, Dyson and other companies, I focus on data-driven design to enhance user engagement and solve real-world problems. I love diving into complex user needs, utilizing research, prototyping, and strategic design to create thoughtful, impactful solutions.</p>
+                <p>Product Designer with a strong background in UX research and interaction design, specializing in crafting intuitive and engaging experiences. <br><br>With experience at GameChanger, Dell Medical School, Dyson and other companies, I focus on data-driven design to enhance user engagement and solve real-world problems. <br><br> I love diving into complex user needs, utilizing research, prototyping, and strategic design to create thoughtful, impactful solutions.</p>
         
 
 
@@ -324,7 +324,7 @@
             </div>
             
             <div style="background-color: #f7f7f7; border-radius: 24px; padding:24px">
-                <p style="margin-bottom: 1.5 rem; color: #121212; font-weight: bolder;">Outside of design, I’m passionate about making music, staying active through sports, and exploring the outdoors. These creative and physical pursuits keep me inspired and grounded, giving me a fresh perspective that I bring back to my design work.</p>
+                <h1 style="margin-bottom: 2rem; font-size: 1.5rem; color: #808080;">I stay inspired through <span style="color: #121212;">music, sports</span>, and exploring the <span style="color: #121212;">outdoors.</span></h1>
                 <div class="grid-container" style="margin-top: 0; gap: 1.5rem; padding: 0px; background-color: #f7f7f7; border-radius: 24px;">
                     <iframe class="youtubeembed" width="100%" height="100%" src="https://www.youtube.com/embed/gQ2JJXckYck?si=o4Xn3ehS7EcggTk-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.5rem;" ></iframe>
                     <div class="projectcard">
