--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </section>
 
     <section id="aboutme" style="margin-top: 0rem;">
-        <div class="grid-container">
+        <div class="about-container">
             <div>
                 <h1 style="margin-bottom: 1rem;">About <span style="color: #5F50CC;">Me</span></h1>
                 <p>Product Designer with a strong background in UX research and interaction design, specializing in crafting intuitive and engaging experiences. <br><br>With experience at GameChanger, Dell Medical School, Dyson and other companies, I focus on data-driven design to enhance user engagement and solve real-world problems. <br><br> I love diving into complex user needs, utilizing research, prototyping, and strategic design to create thoughtful, impactful solutions.</p>
