--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             
             <div style="background-color: #f7f7f7; border-radius: 24px; padding:24px">
                 <h1 style="margin-bottom: 2rem; font-size: 1.5rem; color: #808080;">I stay inspired through <span style="color: #121212;">music, sports</span>, and exploring the <span style="color: #121212;">outdoors.</span></h1>
-                <div class="grid-container" style="margin-top: 0; gap: 1.5rem; padding: 0px; background-color: #f7f7f7; border-radius: 24px;">
+                <div class="about-container" style="margin-top: 0; gap: 1.5rem; padding: 0px; background-color: #f7f7f7; border-radius: 24px;">
                     <iframe class="youtubeembed" width="100%" height="100%" src="https://www.youtube.com/embed/gQ2JJXckYck?si=o4Xn3ehS7EcggTk-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.5rem;" ></iframe>
                     <div class="projectcard">
                         <div class="projectcardtext" style="gap: 0.5rem;">
