--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="buttons" style="margin-top: 2rem;">
+            <div class="buttons" style="margin-top: 2rem; margin: auto;">
                 <a href="#projects" style="text-decoration: none; display: block; width: 100%;">
                     <div class="circle-container">
                         <div class="arrow">↓</div>
